Fixed flickering issue and capitalize and image issue

--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -108,6 +108,16 @@
   }
 }
 
+.reg_match_image_container {
+  flex: 2 1 0;
+  img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
 .desc_container {
   display: flex;
   flex-direction: column;
@@ -399,6 +409,7 @@ img.slides_image {
   font-family: $bs-body-font-family;
   font-weight: 400;
   font-size: 16px;
+  flex: 3, 1, 0;
 }
 
 .content .dashboard {
